docs: trim CLAUDE.md and README.md, point into new docs/ layout
Now that docs/features/, docs/architecture/, and docs/operations/ hold
the live content, trim the two top-level docs that previously duplicated
much of it.

CLAUDE.md (518 -> 195 lines): keeps the load-bearing rules (worktree
workflow, SOLID, code style, testing checklist summary, git
conventions, cross-platform rule, ADR workflow, production safety
rails, env-var rule, error handling, MCP maintenance rules) and adds
a "Where to find things" pointer table at the top. Removes the
full build/release runbook, mobile + desktop versioning detail,
Google Play / App Store / Mac App Store sections, and automated
release-notes section — all now in docs/operations/builds-and-releases.md.

README.md (333 -> 112 lines): refocused on user/contributor onboarding.
Keeps features, tech stack, getting started, core scripts, and a short
project layout. Removes the deep architecture prose, environments
table, full per-app script matrices, and design-system reference —
all now linked into docs/features/, docs/architecture/, and
docs/operations/.

No content lost — every removed section is preserved in a more
discoverable home.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>